--- a/gow-JYassine/index.html
+++ b/gow-JYassine/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="game.css">
-    <title>Babylon - Getting Started</title>
+    <title>SeaScape</title>
     <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.2/dat.gui.min.js"></script>
         <script src="https://preview.babylonjs.com/ammo.js"></script>
@@ -25,5 +25,5 @@
 </body>
 
 
-<script src="./game.js" ></script>
+<script src="./game.js" type="module" ></script>
 </html>
